# peetsfea-runner

./: .gitignore  AGENTS.md  README.md  pyproject.toml  runner.py  sample.aedt
PLANS/: 01-summary-and-scope.md  02-public-api-and-config.md  03-remote-execution-workflow.md  04-release-tag-and-remote-install.md  05-testing-and-acceptance.md  06-01-screen-8window-orchestration.md  06-02-case-lifecycle-and-exit-aggregation.md  06-03-artifact-collection-regardless-of-success.md  06-04-tests-and-acceptance-for-8window-batch.md  06-05-self-debug-execution-plan.md  07-01-api-queue-duckdb.md  07-02-slot-scheduler-remote-job.md  07-03-orphan-summary-acceptance.md  07-04-test-matrix-and-gates.md  09-systemd-user-service-setup.md  11-01-continuous-ingest-window-model.md  11-02-capacity-and-balanced-bundle-scheduler.md  11-03-web-observability-tests-rollout.md  12-01-slot-refill-scheduler-transition.md  12-02-slot-owned-lifecycle-and-state-model.md  12-03-noninteractive-remote-execution-and-isolation.md  12-240-independent-throughput-slots.md  MASTER_PLAN.md  OPERATIONS_RUNBOOK.md  ROADMAP-06-8window.md  ROADMAP-07-80parallel-single-account.md  ROADMAP-08-550parallel-multi-account.md  ROADMAP-09-10-ops-duckdb-systemd-web.md  ROADMAP-11-24x7-window-balanced-scheduler.md  ROADMAP-post-05.md  SHORT_TERM_PLAN_04_HFSS_EXECUTION_REPORT_EXPORT_AND_PACKAGING.md  SHORT_TERM_PLAN_05_OPERATIONS_RECONCILIATION_AND_OBSERVABILITY.md  SHORT_TERM_PLAN_06_RESULTS_COLLECTION_AND_DONE_PROMOTION.md  function-only-aedt-slurm-automation.md  ops-stabilization-01-current-path-guardrails.md  (+42 more)
docs/: README.md
(+91 files in other folders)
