[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peetsfea-runner"
version = "0.1.0"
description = "Minimal daemon bootstrap for AEDT queue watching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
worker = [
  "pyaedt==0.22.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
