[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peetsfea-runner"
version = "0.1.0"
description = "Function-only AEDT Slurm pipeline skeleton"
requires-python = "==3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["peetsfea_runner*"]

