[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peetsfea-runner"
version = "2026.03.10.4"
description = "Function-only AEDT Slurm pipeline skeleton"
requires-python = "==3.12.*"
dependencies = [
  "pexpect>=4.9",
  "duckdb>=1.4.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["peetsfea_runner*"]
